# python-project-52

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: lint_check.yml  run_tests.yml
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  home.html
task_manager/templates/cud/: create_update.html  delete.html
task_manager/templates/labels/: list.html
task_manager/templates/statuses/: create.html  delete.html  list.html
task_manager/templates/tasks/: detail.html  list.html
task_manager/templates/users/: create.html  delete.html  list.html  login.html  update.html
task_manager/users/: admin.py  forms.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
